# KR-Kompiler-Ready

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/config/: constants.rs
src/project/: dependencies.rs  mod.rs  scaffold.rs  templates.rs
src/utils/: ai_utils.rs  fs_utils.rs  git_utils.rs  mod.rs  python_utils.rs
