[package]
name = "kr"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
dirs = "6.0.0"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
which = "8.0.0"
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.10.0"
